Внес небольшие изменения в окне логина
Добавил новый функционал:
Окно регистрации пользователя

--- a/Interface_files/WindowAccountLogin.ui
+++ b/Interface_files/WindowAccountLogin.ui
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <ui version="4.0">
- <class>Dialog</class>
- <widget class="QWidget" name="Dialog">
+ <class>LoginWindow</class>
+ <widget class="QWidget" name="LoginWindow">
   <property name="geometry">
    <rect>
     <x>0</x>
@@ -198,6 +198,9 @@ font: 13pt &quot;Sitka&quot;;
       <property name="styleSheet">
        <string notr="true">background-color: white;</string>
       </property>
+      <property name="clearButtonEnabled">
+       <bool>true</bool>
+      </property>
      </widget>
     </item>
    </layout>
@@ -259,6 +262,12 @@ font: 13pt &quot;Sitka&quot;;
       <property name="styleSheet">
        <string notr="true">background-color: white;
 </string>
+      </property>
+      <property name="echoMode">
+       <enum>QLineEdit::EchoMode::PasswordEchoOnEdit</enum>
+      </property>
+      <property name="clearButtonEnabled">
+       <bool>true</bool>
       </property>
      </widget>
     </item>
