--- a/Interface_files/MainWNotes.ui
+++ b/Interface_files/MainWNotes.ui
@@ -46,7 +46,7 @@
         </property>
         <property name="maximumSize">
          <size>
-          <width>80</width>
+          <width>90</width>
           <height>25</height>
          </size>
         </property>
@@ -76,7 +76,7 @@ color: rgb(91, 61, 107)</string>
       <item>
        <spacer name="horizontalSpacer_3">
         <property name="orientation">
-         <enum>Qt::Horizontal</enum>
+         <enum>Qt::Orientation::Horizontal</enum>
         </property>
         <property name="sizeHint" stdset="0">
          <size>
@@ -121,7 +121,7 @@ color: white</string>
       <item>
        <spacer name="horizontalSpacer">
         <property name="orientation">
-         <enum>Qt::Horizontal</enum>
+         <enum>Qt::Orientation::Horizontal</enum>
         </property>
         <property name="sizeHint" stdset="0">
          <size>
@@ -192,7 +192,7 @@ color: white</string>
          <widget class="QPushButton" name="btn_add_note">
           <property name="maximumSize">
            <size>
-            <width>80</width>
+            <width>90</width>
             <height>25</height>
            </size>
           </property>
@@ -214,7 +214,7 @@ color: rgb(91, 61, 107)</string>
          <widget class="QPushButton" name="btn_storage">
           <property name="maximumSize">
            <size>
-            <width>80</width>
+            <width>90</width>
             <height>25</height>
            </size>
           </property>
@@ -236,7 +236,7 @@ color: rgb(91, 61, 107)</string>
          <widget class="QPushButton" name="btn_settings">
           <property name="maximumSize">
            <size>
-            <width>80</width>
+            <width>90</width>
             <height>25</height>
            </size>
           </property>
@@ -257,7 +257,7 @@ color: rgb(91, 61, 107)</string>
         <item>
          <spacer name="verticalSpacer">
           <property name="orientation">
-           <enum>Qt::Vertical</enum>
+           <enum>Qt::Orientation::Vertical</enum>
           </property>
           <property name="sizeHint" stdset="0">
            <size>
@@ -312,7 +312,7 @@ color: rgb(91, 61, 107)</string>
           <item>
            <spacer name="horizontalSpacer_2">
             <property name="orientation">
-             <enum>Qt::Horizontal</enum>
+             <enum>Qt::Orientation::Horizontal</enum>
             </property>
             <property name="sizeHint" stdset="0">
              <size>
