--- a/Interface_files/DialogWNameNote.ui
+++ b/Interface_files/DialogWNameNote.ui
@@ -6,20 +6,20 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>300</width>
-    <height>150</height>
+    <width>367</width>
+    <height>212</height>
    </rect>
   </property>
   <property name="minimumSize">
    <size>
-    <width>300</width>
-    <height>150</height>
+    <width>367</width>
+    <height>212</height>
    </size>
   </property>
   <property name="maximumSize">
    <size>
-    <width>300</width>
-    <height>150</height>
+    <width>367</width>
+    <height>212</height>
    </size>
   </property>
   <property name="windowTitle">
@@ -38,9 +38,9 @@
      <property name="font">
       <font>
        <family>Sitka Text Semibold</family>
-       <pointsize>15</pointsize>
+       <pointsize>19</pointsize>
        <italic>false</italic>
-       <fontweight>DemiBold</fontweight>
+       <bold>false</bold>
       </font>
      </property>
      <property name="layoutDirection">
@@ -50,15 +50,20 @@
       <bool>false</bool>
      </property>
      <property name="styleSheet">
-      <string notr="true">font: 600 &quot;Sitka Text Semibold&quot;;</string>
+      <string notr="true">font: 19pt &quot;Sitka Text Semibold&quot;;
+background-color: none;
+</string>
      </property>
      <property name="text">
-      <string>Enter the name of new file</string>
+      <string>Enter the name of new file:</string>
      </property>
     </widget>
    </item>
    <item>
     <widget class="QLabel" name="labelError">
+     <property name="styleSheet">
+      <string notr="true">background-color: none;</string>
+     </property>
      <property name="text">
       <string/>
      </property>
@@ -66,8 +71,17 @@
    </item>
    <item>
     <widget class="QLineEdit" name="lineEdit">
+     <property name="enabled">
+      <bool>true</bool>
+     </property>
+     <property name="mouseTracking">
+      <bool>true</bool>
+     </property>
      <property name="styleSheet">
-      <string notr="true">background-color: white</string>
+      <string notr="true">background-color: white;</string>
+     </property>
+     <property name="text">
+      <string/>
      </property>
     </widget>
    </item>
