--- a/Interface_files/WindowAccountLogin.ui
+++ b/Interface_files/WindowAccountLogin.ui
@@ -6,20 +6,20 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>365</width>
-    <height>380</height>
+    <width>498</width>
+    <height>514</height>
    </rect>
   </property>
   <property name="minimumSize">
    <size>
-    <width>365</width>
-    <height>380</height>
+    <width>498</width>
+    <height>514</height>
    </size>
   </property>
   <property name="maximumSize">
    <size>
-    <width>365</width>
-    <height>380</height>
+    <width>498</width>
+    <height>514</height>
    </size>
   </property>
   <property name="windowTitle">
@@ -32,78 +32,18 @@
   <property name="styleSheet">
    <string notr="true">background-color: rgb(216, 193, 219)</string>
   </property>
-  <widget class="QLabel" name="label_App">
-   <property name="geometry">
-    <rect>
-     <x>97</x>
-     <y>9</y>
-     <width>171</width>
-     <height>25</height>
-    </rect>
-   </property>
-   <property name="maximumSize">
-    <size>
-     <width>300</width>
-     <height>45</height>
-    </size>
-   </property>
-   <property name="font">
-    <font>
-     <family>Snap ITC</family>
-     <pointsize>15</pointsize>
-     <italic>false</italic>
-     <bold>false</bold>
-     <underline>false</underline>
-    </font>
-   </property>
-   <property name="styleSheet">
-    <string notr="true">font: 15pt &quot;Snap ITC&quot;;</string>
-   </property>
-   <property name="text">
-    <string>Axolot's Notes</string>
-   </property>
-   <property name="textFormat">
-    <enum>Qt::TextFormat::AutoText</enum>
-   </property>
-   <property name="scaledContents">
-    <bool>true</bool>
-   </property>
-  </widget>
-  <widget class="QLabel" name="label_log">
-   <property name="geometry">
-    <rect>
-     <x>160</x>
-     <y>40</y>
-     <width>45</width>
-     <height>16</height>
-    </rect>
-   </property>
-   <property name="font">
-    <font>
-     <family>Sitka Subheading Semibold</family>
-     <pointsize>11</pointsize>
-     <italic>false</italic>
-     <fontweight>DemiBold</fontweight>
-    </font>
-   </property>
-   <property name="layoutDirection">
-    <enum>Qt::LayoutDirection::LeftToRight</enum>
-   </property>
-   <property name="styleSheet">
-    <string notr="true">font: 600 11pt &quot;Sitka Subheading Semibold&quot;;</string>
-   </property>
-   <property name="text">
-    <string>LOGIN</string>
-   </property>
-  </widget>
   <widget class="QLabel" name="label_error">
    <property name="geometry">
     <rect>
-     <x>20</x>
-     <y>180</y>
-     <width>331</width>
-     <height>71</height>
+     <x>40</x>
+     <y>250</y>
+     <width>421</width>
+     <height>121</height>
     </rect>
+   </property>
+   <property name="styleSheet">
+    <string notr="true">background-color: none;
+</string>
    </property>
    <property name="text">
     <string/>
@@ -112,10 +52,10 @@
   <widget class="QWidget" name="layoutWidget">
    <property name="geometry">
     <rect>
-     <x>140</x>
-     <y>320</y>
-     <width>77</width>
-     <height>54</height>
+     <x>170</x>
+     <y>380</y>
+     <width>161</width>
+     <height>121</height>
     </rect>
    </property>
    <layout class="QVBoxLayout" name="verticalLayout_2">
@@ -148,27 +88,154 @@ font: 11pt &quot;Sitka&quot;;
   <widget class="QWidget" name="layoutWidget">
    <property name="geometry">
     <rect>
-     <x>10</x>
-     <y>62</y>
-     <width>347</width>
-     <height>47</height>
+     <x>40</x>
+     <y>100</y>
+     <width>421</width>
+     <height>131</height>
     </rect>
    </property>
-   <layout class="QVBoxLayout" name="verticalLayout">
+   <layout class="QVBoxLayout" name="verticalLayout_4">
     <item>
-     <widget class="QLabel" name="label_name">
-      <property name="minimumSize">
-       <size>
-        <width>345</width>
-        <height>0</height>
-       </size>
+     <layout class="QVBoxLayout" name="verticalLayout">
+      <item>
+       <widget class="QLabel" name="label_name">
+        <property name="minimumSize">
+         <size>
+          <width>345</width>
+          <height>0</height>
+         </size>
+        </property>
+        <property name="maximumSize">
+         <size>
+          <width>400</width>
+          <height>300</height>
+         </size>
+        </property>
+        <property name="font">
+         <font>
+          <family>Sitka</family>
+          <pointsize>13</pointsize>
+          <italic>false</italic>
+          <bold>false</bold>
+         </font>
+        </property>
+        <property name="styleSheet">
+         <string notr="true">font: 13pt &quot;Sitka&quot;;
+background-color: none;
+</string>
+        </property>
+        <property name="text">
+         <string>Name:</string>
+        </property>
+       </widget>
+      </item>
+      <item>
+       <widget class="QLineEdit" name="lineEdit_name">
+        <property name="minimumSize">
+         <size>
+          <width>345</width>
+          <height>22</height>
+         </size>
+        </property>
+        <property name="styleSheet">
+         <string notr="true">background-color: white;</string>
+        </property>
+        <property name="clearButtonEnabled">
+         <bool>true</bool>
+        </property>
+       </widget>
+      </item>
+     </layout>
+    </item>
+    <item>
+     <layout class="QVBoxLayout" name="verticalLayout_3">
+      <item>
+       <widget class="QLabel" name="label_password">
+        <property name="minimumSize">
+         <size>
+          <width>345</width>
+          <height>0</height>
+         </size>
+        </property>
+        <property name="maximumSize">
+         <size>
+          <width>400</width>
+          <height>300</height>
+         </size>
+        </property>
+        <property name="font">
+         <font>
+          <family>Sitka</family>
+          <pointsize>13</pointsize>
+          <italic>false</italic>
+          <bold>false</bold>
+         </font>
+        </property>
+        <property name="styleSheet">
+         <string notr="true">font: 13pt &quot;Sitka&quot;;
+background-color: none;</string>
+        </property>
+        <property name="text">
+         <string>Password:</string>
+        </property>
+       </widget>
+      </item>
+      <item>
+       <widget class="QLineEdit" name="lineEdit_password">
+        <property name="styleSheet">
+         <string notr="true">background-color: white;
+</string>
+        </property>
+        <property name="echoMode">
+         <enum>QLineEdit::EchoMode::PasswordEchoOnEdit</enum>
+        </property>
+        <property name="clearButtonEnabled">
+         <bool>true</bool>
+        </property>
+       </widget>
+      </item>
+     </layout>
+    </item>
+   </layout>
+  </widget>
+  <widget class="QWidget" name="layoutWidget">
+   <property name="geometry">
+    <rect>
+     <x>140</x>
+     <y>10</y>
+     <width>211</width>
+     <height>81</height>
+    </rect>
+   </property>
+   <layout class="QVBoxLayout" name="verticalLayout_5">
+    <item>
+     <widget class="QLabel" name="label_App">
+      <property name="font">
+       <font>
+        <family>Snap ITC</family>
+        <pointsize>17</pointsize>
+        <italic>false</italic>
+        <bold>false</bold>
+        <underline>false</underline>
+       </font>
       </property>
-      <property name="maximumSize">
-       <size>
-        <width>400</width>
-        <height>300</height>
-       </size>
+      <property name="styleSheet">
+       <string notr="true">font: 17pt &quot;Snap ITC&quot;;
+background-color: none;</string>
       </property>
+      <property name="text">
+       <string>Axolot's Notes</string>
+      </property>
+      <property name="textFormat">
+       <enum>Qt::TextFormat::AutoText</enum>
+      </property>
+      <property name="scaledContents">
+       <bool>true</bool>
+      </property>
+     </widget>
+    </item>
+    <item alignment="Qt::AlignmentFlag::AlignHCenter">
+     <widget class="QLabel" name="label_log">
       <property name="font">
        <font>
         <family>Sitka</family>
@@ -177,97 +244,19 @@ font: 11pt &quot;Sitka&quot;;
         <bold>false</bold>
        </font>
       </property>
+      <property name="whatsThis">
+       <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p align=&quot;center&quot;&gt;&lt;br/&gt;&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
+      </property>
+      <property name="layoutDirection">
+       <enum>Qt::LayoutDirection::LeftToRight</enum>
+      </property>
       <property name="styleSheet">
-       <string notr="true">
-font: 13pt &quot;Sitka&quot;;
+       <string notr="true">font: 13pt &quot;Sitka&quot;;;
+background-color: none;
 </string>
       </property>
       <property name="text">
-       <string>Name</string>
-      </property>
-     </widget>
-    </item>
-    <item>
-     <widget class="QLineEdit" name="lineEdit_name">
-      <property name="minimumSize">
-       <size>
-        <width>345</width>
-        <height>22</height>
-       </size>
-      </property>
-      <property name="styleSheet">
-       <string notr="true">background-color: white;</string>
-      </property>
-      <property name="clearButtonEnabled">
-       <bool>true</bool>
-      </property>
-     </widget>
-    </item>
-   </layout>
-  </widget>
-  <widget class="QWidget" name="layoutWidget">
-   <property name="geometry">
-    <rect>
-     <x>12</x>
-     <y>122</y>
-     <width>347</width>
-     <height>45</height>
-    </rect>
-   </property>
-   <layout class="QVBoxLayout" name="verticalLayout_3">
-    <item>
-     <widget class="QLabel" name="label_password">
-      <property name="minimumSize">
-       <size>
-        <width>345</width>
-        <height>0</height>
-       </size>
-      </property>
-      <property name="maximumSize">
-       <size>
-        <width>400</width>
-        <height>300</height>
-       </size>
-      </property>
-      <property name="font">
-       <font>
-        <family>Sitka</family>
-        <pointsize>11</pointsize>
-        <italic>false</italic>
-        <bold>false</bold>
-       </font>
-      </property>
-      <property name="styleSheet">
-       <string notr="true">font: 11pt &quot;Sitka&quot;;</string>
-      </property>
-      <property name="text">
-       <string>Password</string>
-      </property>
-     </widget>
-    </item>
-    <item>
-     <widget class="QLineEdit" name="lineEdit_password">
-      <property name="minimumSize">
-       <size>
-        <width>345</width>
-        <height>22</height>
-       </size>
-      </property>
-      <property name="maximumSize">
-       <size>
-        <width>345</width>
-        <height>22</height>
-       </size>
-      </property>
-      <property name="styleSheet">
-       <string notr="true">background-color: white;
-</string>
-      </property>
-      <property name="echoMode">
-       <enum>QLineEdit::EchoMode::PasswordEchoOnEdit</enum>
-      </property>
-      <property name="clearButtonEnabled">
-       <bool>true</bool>
+       <string>LOG IN</string>
       </property>
      </widget>
     </item>
