добавила в файл ресурсов шрифты

--- a/Interface_files/res.qrc
+++ b/Interface_files/res.qrc
@@ -12,4 +12,7 @@
     <file>icons/png-transparent-computer-icons-settings-text-symbol-settings.png</file>
     <file>icons/png-transparent-empty-folder-files-documents-files-and-folders-icon.png</file>
   </qresource>
+  <qresource prefix="fonts">
+    <file>fonts/Snap ITC.ttf</file>
+  </qresource>
 </RCC>
