--- a/Interface_files/WindowSignin.ui
+++ b/Interface_files/WindowSignin.ui
@@ -39,14 +39,14 @@
       <widget class="QLabel" name="label">
        <property name="font">
         <font>
-         <family>Snap ITC</family>
+         <family>Arial</family>
          <pointsize>27</pointsize>
          <italic>false</italic>
          <bold>false</bold>
         </font>
        </property>
        <property name="styleSheet">
-        <string notr="true">font: 27pt &quot;Snap ITC&quot;;
+        <string notr="true">font: url(:/fonts/fonts/Snap ITC.ttf);
 background-color: none;</string>
        </property>
        <property name="text">
@@ -214,6 +214,13 @@ color: rgb(91, 61, 107)</string>
        </layout>
       </item>
      </layout>
+    </widget>
+   </item>
+   <item>
+    <widget class="QLabel" name="label_error">
+     <property name="text">
+      <string/>
+     </property>
     </widget>
    </item>
    <item>
